# ChangeLog for eclass directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.953 2013/09/08 22:54:23 mgorny Exp $

  08 Sep 2013; Michał Górny <mgorny@gentoo.org> git-2.eclass:
  Inherit git-r3 unconditionally to avoid metadata variancy. The eclass is
  properly namespaced, does not touch variables in global scope and exports
  only src_unpack() that git-2 overrides anyway.

  08 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Fix PYTHON_SITEDIR for Jython.

  08 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Do not export PYTHON_INCLUDEDIR on Jython, since it does not install headers.

  06 Sep 2013; Ian Stakenvicius <axs@gentoo.org> cmake-multilib.eclass:
  added multilib_*_wrappers calls to cmake-multilib.eclass

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> git-r3.eclass:
  Do not pass --depth when updating a branch, it trrigers issues in git.
  Instead, use it for the first fetch only.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> git-2.eclass:
  Support using git-r3 backend in git-2.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> +git-r3.eclass:
  Introduce the new git eclass.

  05 Sep 2013; Tom Wijsman <TomWij@gentoo.org> kernel-2.eclass:
  Added support for experimental genpatches.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Disable Python 2.5, 3.1 and PyPy 1.9 in the eclass.

  04 Sep 2013; Ulrich Müller <ulm@gentoo.org> elisp-common.eclass:
  Add proper @CODE tags in comments.

  03 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> gnome2-utils.eclass,
  gnome2.eclass:
  Add gdk-pixbuf cache handling functions.

  31 Aug 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment.eclass:
  Add git support for live packages using enlightenment.eclass

  28 Aug 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Introduce python_is_python3() to replace the common checks.
